jumping fix

--- a/wp-content/themes/velcom/styles/css/index.css
+++ b/wp-content/themes/velcom/styles/css/index.css
@@ -424,6 +424,12 @@ ul{
 	height: 100%;*/
 }
 
+.blog_wr2:first-child{
+	-webkit-transition: none;
+	-o-transition: none;
+	transition: none;
+}
+
 .name{
 	padding-bottom: 24px;
 }
